Fix #21036 - [Feature] Improve version cleaner, add max processed node property to system configuration

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_en.properties
@@ -51,6 +51,7 @@ beCPG.sendToSupplier.entityName.format.description             = Allows you to d
 beCPG.sendToSupplier.projectName.format.description            = Allows you to define the format of the name of a supplier referencing project
 beCPG.spel.security.authorizedTypes.description                = Allows you to define the list of Java types authorized by SpEL formulas, separated by commas
 beCPG.spel.security.authorizedTypes.type                       = string
+beCPG.version.cleaner.maxProcessedNodes.description            = Allows you to define the number of nodes processed by the version cleanup job
 
 mail.logo.url.description = Allows you to define the URL of the logo used in the email signature
 mail.logo.url.type        = string
