--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_fr.properties
@@ -51,6 +51,7 @@ beCPG.sendToSupplier.entityName.format.description             = Permet de d\u00
 beCPG.sendToSupplier.projectName.format.description            = Permet de d\u00E9finir le format du nom d'un projet de r\u00E9f\u00E9rencement fournisseur
 beCPG.spel.security.authorizedTypes.description                = Permet de d\u00E9finir la liste des types Java autoris\u00E9s par les formules SpEL, s\u00E9par\u00E9s par des virgules
 beCPG.spel.security.authorizedTypes.type                       = string
+beCPG.version.cleaner.maxProcessedNodes.description            = Permet de d\u00E9finir le nombre de noeuds trait\u00E9s par le job de nettoyage des versions
 
 mail.logo.url.description = Permet de d\u00E9finir l'URL du logo utilis\u00E9 dans la signature des mails
 mail.logo.url.type        = string
