InProgress #10243 - [Feature] Add becpg-ai connector proxy

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/groups_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/groups_fr.properties
@@ -1,4 +1,5 @@
 
+becpg.group.aiuser                    = beCPG Utilisateurs AI
 becpg.group.externaluser              = beCPG Utilisateurs externes
 becpg.group.externalusermgr           = beCPG Gestionnaire utilisateurs externes
 becpg.group.languagemgr               = beCPG Responsables langue
