InProgress #20640 - [Feature] Adjusting formulation + better UI

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/paths_fr.properties
@@ -171,7 +171,7 @@ path.supplier_hierarchy                  = Hi\u00E9rarchie des fournisseurs
 path.supplierdocuments                   = Documents fournisseur
 path.supplierentities                    = Entit\u00E9s fournisseur
 path.suppliers                           = Fournisseurs
-path.svhcreasonsforinclusions            = Raisons de l'inclusion dans les substances dangereuses
+path.svhcreasonsforinclusions            = Raisons de l'inclusion dans les SVHC
 path.targetmarkets                       = March\u00E9s cibles
 path.tradeitemtradechannel               = Circuits de distribution
 path.tradeitemunitdescriptorcode         = Types d'unit\u00E9 commerciale
