--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
@@ -288,7 +288,7 @@ bcpg_bcpgmodel.property.bcpg_irlSources.title                             = Sour
 bcpg_bcpgmodel.property.bcpg_irlUsages.title                              = Usages
 bcpg_bcpgmodel.property.bcpg_isCharactPropagateUp.title                   = Propagate
 bcpg_bcpgmodel.property.bcpg_isIngListManual.title                        = Is ingredient list manual?
-bcpg_bcpgmodel.property.bcpg_isSubstanceOfVeryHighConcern.title           = Is substance of very high concerns?
+bcpg_bcpgmodel.property.bcpg_isSubstanceOfVeryHighConcern.title           = SVHC
 bcpg_bcpgmodel.property.bcpg_labelClaimCode.title                         = Code
 bcpg_bcpgmodel.property.bcpg_labelClaimFormula.title                      = Formula
 bcpg_bcpgmodel.property.bcpg_labelClaimRegulatoryThreshold.title          = Regulatory threshold (%)
@@ -479,7 +479,7 @@ bcpg_bcpgmodel.property.bcpg_supplierState.title                          = Stat
 bcpg_bcpgmodel.property.bcpg_supplierTel.description                      = Phone company
 bcpg_bcpgmodel.property.bcpg_supplierTel.title                            = Phone
 bcpg_bcpgmodel.property.bcpg_svhcListQtyPerc.title                        = Quantity (%)
-bcpg_bcpgmodel.property.bcpg_svhcReasonsForInclusion.title                = Reasons for inclusion in the list of substances of very high concerns
+bcpg_bcpgmodel.property.bcpg_svhcReasonsForInclusion.title                = SVHC type
 bcpg_bcpgmodel.property.bcpg_trademarkType.title                          = Type
 bcpg_bcpgmodel.property.bcpg_unitPrice.title                              = Selling price per sales unit
 bcpg_bcpgmodel.property.bcpg_unitTotalCost.title                          = Cost per sales unit
