--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -288,7 +288,7 @@ bcpg_bcpgmodel.property.bcpg_irlSources.title                             = Sour
 bcpg_bcpgmodel.property.bcpg_irlUsages.title                              = Usages
 bcpg_bcpgmodel.property.bcpg_isCharactPropagateUp.title                   = Propager
 bcpg_bcpgmodel.property.bcpg_isIngListManual.title                        = La liste des ingr\u00E9dients est-elle manuelle ?
-bcpg_bcpgmodel.property.bcpg_isSubstanceOfVeryHighConcern.title           = Est-ce une substance extr\u00EAmement pr\u00E9occupante ?
+bcpg_bcpgmodel.property.bcpg_isSubstanceOfVeryHighConcern.title           = Substance dangereuse
 bcpg_bcpgmodel.property.bcpg_labelClaimCode.title                         = Code
 bcpg_bcpgmodel.property.bcpg_labelClaimFormula.title                      = Formule
 bcpg_bcpgmodel.property.bcpg_labelClaimRegulatoryThreshold.title          = Seuil r\u00E9glementaire (%)
@@ -479,7 +479,7 @@ bcpg_bcpgmodel.property.bcpg_supplierState.title                          = Etat
 bcpg_bcpgmodel.property.bcpg_supplierTel.description                      = T\u00E9l\u00E9phone de l'entreprise
 bcpg_bcpgmodel.property.bcpg_supplierTel.title                            = T\u00E9l\u00E9phone
 bcpg_bcpgmodel.property.bcpg_svhcListQtyPerc.title                        = Quantit\u00E9 (%)
-bcpg_bcpgmodel.property.bcpg_svhcReasonsForInclusion.title                = Raison de l'inclusion dans la liste des substances extr\u00EAmement dangereuses
+bcpg_bcpgmodel.property.bcpg_svhcReasonsForInclusion.title                = Type de SVHC
 bcpg_bcpgmodel.property.bcpg_trademarkType.title                          = Type
 bcpg_bcpgmodel.property.bcpg_unitPrice.title                              = Prix de vente par UV
 bcpg_bcpgmodel.property.bcpg_unitTotalCost.title                          = Co\u00FBt de revient par UV
