InProgress #20640 - [Feature] Add svhc migration perc

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
@@ -478,6 +478,7 @@ bcpg_bcpgmodel.property.bcpg_supplierRefCode.title                        = Supp
 bcpg_bcpgmodel.property.bcpg_supplierState.title                          = State of supplier
 bcpg_bcpgmodel.property.bcpg_supplierTel.description                      = Phone company
 bcpg_bcpgmodel.property.bcpg_supplierTel.title                            = Phone
+bcpg_bcpgmodel.property.bcpg_svhcListMigrationPerc.title                  = Migration (%)
 bcpg_bcpgmodel.property.bcpg_svhcListQtyPerc.title                        = Quantity (%)
 bcpg_bcpgmodel.property.bcpg_svhcReasonsForInclusion.title                = SVHC type
 bcpg_bcpgmodel.property.bcpg_trademarkType.title                          = Type
