--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -478,6 +478,7 @@ bcpg_bcpgmodel.property.bcpg_supplierRefCode.title                        = R\u0
 bcpg_bcpgmodel.property.bcpg_supplierState.title                          = Etat du fournisseur
 bcpg_bcpgmodel.property.bcpg_supplierTel.description                      = T\u00E9l\u00E9phone de l'entreprise
 bcpg_bcpgmodel.property.bcpg_supplierTel.title                            = T\u00E9l\u00E9phone
+bcpg_bcpgmodel.property.bcpg_svhcListMigrationPerc.title                  = Migration (%)
 bcpg_bcpgmodel.property.bcpg_svhcListQtyPerc.title                        = Quantit\u00E9 (%)
 bcpg_bcpgmodel.property.bcpg_svhcReasonsForInclusion.title                = Type de SVHC
 bcpg_bcpgmodel.property.bcpg_trademarkType.title                          = Type
