Fix #20640 - [Feature] Add SVHC List support

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -614,8 +614,8 @@ bcpg_bcpgmodel.type.bcpg_subsidiary.description                           = List
 bcpg_bcpgmodel.type.bcpg_subsidiary.title                                 = Filiales
 bcpg_bcpgmodel.type.bcpg_supplier.description                             = Fournisseur
 bcpg_bcpgmodel.type.bcpg_supplier.title                                   = Fournisseur
-bcpg_bcpgmodel.type.bcpg_svhcList.description                             = Liste des substances extr\u00EAmement pr\u00E9occupantes
-bcpg_bcpgmodel.type.bcpg_svhcList.title                                   = Substances extr\u00EAmement pr\u00E9occupantes
+bcpg_bcpgmodel.type.bcpg_svhcList.description                             = Substances extr\u00EAmement pr\u00E9occupantes
+bcpg_bcpgmodel.type.bcpg_svhcList.title                                   = Substances dangeureuses
 bcpg_bcpgmodel.type.bcpg_trademark.description                            = Liste des Marques
 bcpg_bcpgmodel.type.bcpg_trademark.title                                  = Marques
 
