--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
@@ -35,7 +35,7 @@ bcpg_bcpgmodel.aspect.bcpg_supplierAspect.description                     = Supp
 bcpg_bcpgmodel.aspect.bcpg_supplierAspect.title                           = Supplier
 bcpg_bcpgmodel.aspect.bcpg_suppliersAspect.description                    = For products purchased from a supplier
 bcpg_bcpgmodel.aspect.bcpg_suppliersAspect.title                          = Suppliers
-bcpg_bcpgmodel.aspect.bcpg_svhcAspect.title                               = Substances of very high concerns
+bcpg_bcpgmodel.aspect.bcpg_svhcAspect.title                               = Dangerous substances
 bcpg_bcpgmodel.aspect.bcpg_transformationAspect.description               = Transformation aspect
 bcpg_bcpgmodel.aspect.bcpg_transformationAspect.title                     = Transformation aspect
 bcpg_bcpgmodel.aspect.bcpg_undeletableAspect.description                  = Undeletable aspect
@@ -614,8 +614,8 @@ bcpg_bcpgmodel.type.bcpg_subsidiary.description                           = Subs
 bcpg_bcpgmodel.type.bcpg_subsidiary.title                                 = Subsidiary
 bcpg_bcpgmodel.type.bcpg_supplier.description                             = Supplier
 bcpg_bcpgmodel.type.bcpg_supplier.title                                   = Supplier
-bcpg_bcpgmodel.type.bcpg_svhcList.description                             = List of substances of very high concerns
-bcpg_bcpgmodel.type.bcpg_svhcList.title                                   = Substances of very high concerns
+bcpg_bcpgmodel.type.bcpg_svhcList.description                             = Substances of very hight concerns
+bcpg_bcpgmodel.type.bcpg_svhcList.title                                   = Dangerous substances
 bcpg_bcpgmodel.type.bcpg_trademark.description                            = Trademark
 bcpg_bcpgmodel.type.bcpg_trademark.title                                  = Trademark
 
