Fix #20597 - [I18N] Update reports translations

--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_de.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_de.properties
@@ -218,11 +218,11 @@ detail = Einzelheiten
 
 documentName = Technische Daten Kunde
 
-eanCode = GTIN/EAN code
+eanCode = GTIN/EAN 
 
-eanCode1 = GTIN/EAN code
+eanCode1 = GTIN/EAN
 
-eanCode2 = GTIN/EAN-Paket
+eanCode2 = GTIN/EAN-Karton
 
 eanCode3 = GTIN/EAN Palette
 
@@ -394,7 +394,7 @@ nameWithoutPunk = Name
 
 nbProductsPkgLevel2 = Anzahl UV/Paket
 
-nbProductsPkgLevel3 = Anzahl der einheit / Palette
+nbProductsPkgLevel3 = Anzahl der Produckt / Palette
 
 netWeight = Nettogewicht (g)
 
@@ -437,9 +437,9 @@ packagingStaples = Verpackungsklammern
 
 page = Seite :
 
-palletBoxesPerLayer = Anzahl der Einheiten pro Box / Layer
+palletBoxesPerLayer = Anzahl der Einheiten pro Kartons / Lagen
 
-palletBoxesPerPallet = Anzahl der Box/Palette
+palletBoxesPerPallet = Anzahl der Kartons/Palette
 
 palletHeight = H\u00F6he maxi in mm
 
@@ -549,7 +549,7 @@ productHierarchy2 = Unterfamilie
 
 productImage = Produktabbildung
 
-productPerBox = Produkt / Box
+productPerBox = Produkt / Karton
 
 productQty = Nettogewicht
 
