--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_en_US.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_en_US.properties
@@ -220,9 +220,9 @@ documentName = Client specification
 
 eanCode = GTIN/EAN unit
 
-eanCode1 = GTIN/EAN Code
+eanCode1 = GTIN/EAN
 
-eanCode2 = GTIN/EAN package
+eanCode2 = GTIN/EAN case
 
 eanCode3 = GTIN/EAN pallet
 
@@ -262,7 +262,7 @@ grossWeightG = Gross weight in oz
 
 grossWeightKg = Gross weight in lb
 
-grossWeightPkgLevel1 = Gross weight of unit in kg
+grossWeightPkgLevel1 = Gross weight of product in kg
 
 grossWeightPkgLevel2 = Gross weight in lb
 
@@ -437,9 +437,9 @@ packagingStaples = Packaging staples
 
 page = Page :
 
-palletBoxesPerLayer = Number of box/layer
+palletBoxesPerLayer = Number of case/layer
 
-palletBoxesPerPallet = Number of box/pallet
+palletBoxesPerPallet = Number of case/pallet
 
 palletHeight = Height maxi in inch
 
@@ -549,7 +549,7 @@ productHierarchy2 = Sub-family
 
 productImage = Product image
 
-productPerBox = Product/Box
+productPerBox = Product/Case
 
 productQty = Net weight
 
