--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_es.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_es.properties
@@ -220,7 +220,7 @@ documentName = Hoja de datos del cliente
 
 eanCode = C\u00F3digo GTIN/EAN
 
-eanCode1 = C\u00F3digo GTIN/EAN
+eanCode1 = GTIN/EAN
 
 eanCode2 = Paquete GTIN/EAN
 
