--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fi.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fi.properties
@@ -220,7 +220,7 @@ documentName = Asiakasm\u00E4\u00E4ritys
 
 eanCode = GTIN/EAN-yksikk\u00F6
 
-eanCode1 = GTIN/EAN-koodi
+eanCode1 = GTIN/EAN
 
 eanCode2 = GTIN/EAN-paketti
 
