--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_it.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_it.properties
@@ -220,7 +220,7 @@ documentName = Scheda Tecnica Del Cliente
 
 eanCode = Codice GTIN/EAN
 
-eanCode1 = Codice GTIN/EAN
+eanCode1 = GTIN/EAN
 
 eanCode2 = Pacchetto GTIN/EAN
 
