--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_nl.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_nl.properties
@@ -220,7 +220,7 @@ documentName = Klantgegevensblad
 
 eanCode = GTIN/EAN-code
 
-eanCode1 = GTIN/EAN-code
+eanCode1 = GTIN/EAN
 
 eanCode2 = GTIN/EAN-pakket
 
