--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_pt.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_pt.properties
@@ -220,7 +220,7 @@ documentName = Especifica\u00E7\u00E3o do cliente
 
 eanCode = Unidade GTIN/EAN
 
-eanCode1 = C\u00F3digo de barra
+eanCode1 = GTIN/EAN
 
 eanCode2 = Pacote GTIN/EAN
 
