--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_ru.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_ru.properties
@@ -220,7 +220,7 @@ documentName = \u0421\u043F\u0435\u0446\u0438\u0444\u0438\u043A\u0430\u0446\u043
 
 eanCode = \u0411\u043B\u043E\u043A GTIN/EAN
 
-eanCode1 = \u041A\u043E\u0434 GTIN/EAN
+eanCode1 = GTIN/EAN
 
 eanCode2 = \u041F\u0430\u043A\u0435\u0442 GTIN/EAN
 
