--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_sv.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_sv.properties
@@ -220,7 +220,7 @@ documentName = Kundspecifikation
 
 eanCode = GTIN/EAN-enhet
 
-eanCode1 = GTIN/EAN-kod
+eanCode1 = GTIN/EAN
 
 eanCode2 = GTIN/EAN-paket
 
