--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_zh_CN.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_zh_CN.properties
@@ -220,7 +220,7 @@ documentName = \u5BA2\u6237\u89C4\u683C
 
 eanCode = GTIN/EAN\u5355\u5143
 
-eanCode1 = GTIN/EAN\u4EE3\u7801
+eanCode1 = GTIN/EAN
 
 eanCode2 = GTIN/EAN\u5305\u88C5
 
