Fix #20597 - [I18N] Rename conditioning labels

--- a/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/beCPG/birt/document/product/default/ProductReport_fr.properties
@@ -447,7 +447,7 @@ palletLayers = Nombre couche/palette
 
 parameters = Param\u00E8tres
 
-pcb = Nombre de produits/bo\u00EEte
+pcb = Nombre de produits/colis
 
 perServing = Portions
 
