--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/surveyModel_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/surveyModel_en.properties
@@ -2,6 +2,7 @@
 survey_surveymodel.association.survey_nextQuestion.title      = Next question
 survey_surveymodel.association.survey_slChoices.title         = Selected choices
 survey_surveymodel.association.survey_slQuestion.title        = Question
+survey_surveymodel.property.pjt_slCriterion.title             = Criterion
 survey_surveymodel.property.survey_questionIsMandatory.title  = Mandatory ?
 survey_surveymodel.property.survey_questionIsVisible.title    = Visible ?
 survey_surveymodel.property.survey_questionLabel.title        = Label
