--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/surveyModel_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/surveyModel_fr.properties
@@ -2,12 +2,14 @@
 survey_surveymodel.association.survey_nextQuestion.title      = Question suivante
 survey_surveymodel.association.survey_slChoices.title         = Choix retenu
 survey_surveymodel.association.survey_slQuestion.title        = Question
+survey_surveymodel.property.pjt_slCriterion.title             = Crit\u00E8re
 survey_surveymodel.property.survey_questionIsMandatory.title  = Obligatoire ?
 survey_surveymodel.property.survey_questionIsVisible.title    = Visible ?
 survey_surveymodel.property.survey_questionLabel.title        = Libell\u00E9
 survey_surveymodel.property.survey_questionLowerNote.title    = Note inf\u00E9rieure
 survey_surveymodel.property.survey_questionNote.title         = Note
 survey_surveymodel.property.survey_questionScore.title        = Score
+survey_surveymodel.property.survey_questionType.title         = Crit\u00E8res d'\u00E9valuation
 survey_surveymodel.property.survey_questionUpperNote.title    = Note sup\u00E9rieure
 survey_surveymodel.property.survey_questionUrl.title          = Url
 survey_surveymodel.property.survey_responseCommentLabel.title = Label du commentaire
