Fix #17364 - [Feature] Correcting after merge review

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/surveyModel_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/surveyModel_fr.properties
@@ -2,7 +2,7 @@
 survey_surveymodel.association.survey_nextQuestion.title      = Question suivante
 survey_surveymodel.association.survey_slChoices.title         = Choix retenu
 survey_surveymodel.association.survey_slQuestion.title        = Question
-survey_surveymodel.property.pjt_slCriterion.title             = Crit\u00E8re
+survey_surveymodel.property.survey_questionCriterion.title    = Crit\u00E8re
 survey_surveymodel.property.survey_questionIsMandatory.title  = Obligatoire ?
 survey_surveymodel.property.survey_questionIsVisible.title    = Visible ?
 survey_surveymodel.property.survey_questionLabel.title        = Libell\u00E9
