Fix #21757 - [Bug] Small spellcheck error

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
@@ -134,7 +134,7 @@ bcpg_bcpgmodel.property.bcpg_advNlValue3.title                            = Valu
 bcpg_bcpgmodel.property.bcpg_advPclValue1.title                           = Value 1
 bcpg_bcpgmodel.property.bcpg_advPclValue2.title                           = Value 2
 bcpg_bcpgmodel.property.bcpg_allergenCode.title                           = Allergen code
-bcpg_bcpgmodel.property.bcpg_allergenInVoluntaryRegulatoryThreshold.title = May contain treshold %
+bcpg_bcpgmodel.property.bcpg_allergenInVoluntaryRegulatoryThreshold.title = May contain threshold %
 bcpg_bcpgmodel.property.bcpg_allergenListDecisionTree.title               = Decision tree
 bcpg_bcpgmodel.property.bcpg_allergenListInVoluntary.title                = May contain
 bcpg_bcpgmodel.property.bcpg_allergenListIsCleaned.title                  = Is risk managed
