--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/becpgModel_fr.properties
@@ -63,6 +63,7 @@ bcpg_bcpgmodel.property.bcpg_autoNumPropertyName.title          = Nom de la prop
 bcpg_bcpgmodel.property.bcpg_autoNumValue.title                 = Valeur
 bcpg_bcpgmodel.property.bcpg_branchFromVersionLabel.title       = Branche issue de la version
 bcpg_bcpgmodel.property.bcpg_charactName.title                  = Nom
+bcpg_bcpgmodel.property.bcpg_clientScore.title                  = % Note
 bcpg_bcpgmodel.property.bcpg_code.title                         = Code beCPG
 bcpg_bcpgmodel.property.bcpg_color.title                        = Couleur
 bcpg_bcpgmodel.property.bcpg_depthLevel.title                   = Niveau
@@ -99,9 +100,11 @@ bcpg_bcpgmodel.property.bcpg_nrTimeType.title                   = Des changement
 bcpg_bcpgmodel.property.bcpg_nrVersionFilter.title              = Uniquement les changements de version
 bcpg_bcpgmodel.property.bcpg_parentLevel.title                  = Parent
 bcpg_bcpgmodel.property.bcpg_physicoChemCode.title              = Code caract\u00E9ristique physico-chimique
+bcpg_bcpgmodel.property.bcpg_productScore.title                 = % Note
 bcpg_bcpgmodel.property.bcpg_sort.title                         = Tri
 bcpg_bcpgmodel.property.bcpg_startEffectivity.title             = D\u00E9but d'effectivit\u00E9
 bcpg_bcpgmodel.property.bcpg_stateActivityModified.title        = Date de dernier changement d'\u00E9tat
+bcpg_bcpgmodel.property.bcpg_supplierScore.title                = % Note
 bcpg_bcpgmodel.property.bcpg_userContentLocale.title            = Langue du contenu
 bcpg_bcpgmodel.property.bcpg_userLocale.title                   = Langue de l'interface
 bcpg_bcpgmodel.property.bcpg_variantIds.title                   = Variantes
