Fix #21149 - [Feature] Add forecast columns for costList

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_en.properties
@@ -198,6 +198,9 @@ bcpg_bcpgmodel.property.bcpg_costFixed.title                              = Fixe
 bcpg_bcpgmodel.property.bcpg_costFormula.title                            = Formula
 bcpg_bcpgmodel.property.bcpg_costListFormulaErrorLog.title                = Formula error
 bcpg_bcpgmodel.property.bcpg_costListFutureValue.title                    = N+1 value
+bcpg_bcpgmodel.property.bcpg_costListFutureValue2.title                   = N+2 value
+bcpg_bcpgmodel.property.bcpg_costListFutureValue3.title                   = N+3 value
+bcpg_bcpgmodel.property.bcpg_costListFutureValue4.title                   = N+4 value
 bcpg_bcpgmodel.property.bcpg_costListIsFormulated.title                   = Is formulated
 bcpg_bcpgmodel.property.bcpg_costListMaxi.title                           = Maxi
 bcpg_bcpgmodel.property.bcpg_costListPreviousValue.title                  = N-1 value
