--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/becpgModelExt_fr.properties
@@ -198,6 +198,9 @@ bcpg_bcpgmodel.property.bcpg_costFixed.title                              = Co\u
 bcpg_bcpgmodel.property.bcpg_costFormula.title                            = Formule
 bcpg_bcpgmodel.property.bcpg_costListFormulaErrorLog.title                = Erreur de formulation
 bcpg_bcpgmodel.property.bcpg_costListFutureValue.title                    = Valeur N+1
+bcpg_bcpgmodel.property.bcpg_costListFutureValue2.title                   = Valeur N+2
+bcpg_bcpgmodel.property.bcpg_costListFutureValue3.title                   = Valeur N+3
+bcpg_bcpgmodel.property.bcpg_costListFutureValue4.title                   = Valeur N+4
 bcpg_bcpgmodel.property.bcpg_costListIsFormulated.title                   = Est formul\u00E9
 bcpg_bcpgmodel.property.bcpg_costListMaxi.title                           = Maxi
 bcpg_bcpgmodel.property.bcpg_costListPreviousValue.title                  = Valeur N-1
