Fix #18331 - [Feature] Add remote rate limiter

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_en.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_en.properties
@@ -3,6 +3,8 @@ admin-console.tool.group.system-configuration = System configuration
 admin-console.tool.system-configuration.label = beCPG System configuration
 
 beCPG.charact.name.format.description                          = Allows you to define the display format of the characteristics name
+beCPG.charact.name.format.readonly                             = true
+beCPG.charact.name.format.type                                 = string
 beCPG.comparison.name.format.description                       = Allows you to define for each type the name format to use during the comparison. The format to respect is type1|format1, type2|format2,...
 beCPG.copyOrBranch.propertiesToReset.description               = Allows you to define properties and associations that will not be preserved during a copy or merge, separated by commas
 beCPG.currency.supported.description                           = Allows you to define the currencies supported by the system, separated by commas
@@ -44,6 +46,10 @@ beCPG.product.report.showDeprecatedXml.description             = Shows GDA and n
 beCPG.product.searchTemplate.description                       = Allows you to set the default product search template used by Alfresco
 beCPG.project.name.format.description                          = Allows you to define the display format for project names
 beCPG.quality.sampleId.format.description                      = Allows you to define the sample name format for process orders
+beCPG.remote.rateLimiter.capacity.description                  = Number of simultaneous requests allowed in the remote API.
+beCPG.remote.rateLimiter.capacity.type                         = Integer
+beCPG.remote.rateLimiter.refillRate.description                = Rate at which the token bucket refills for the remote API rate limiter.
+beCPG.remote.rateLimiter.refillRate.type                       = Double
 beCPG.report.datasource.maxSizeInBytes.description             = Allows you to define the size (in bytes) of the report datasource from which the system raises a non-met requirement
 beCPG.report.image.maxSizeInBytes.description                  = Allows you to define the size (in bytes) of report images from which the system raises a non-met requirement
 beCPG.report.includeReportInSearch.description                 = Allows reports to be indexed so they can be found via search
