--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/messages/system-configuration_fr.properties
@@ -3,6 +3,8 @@ admin-console.tool.group.system-configuration = Configuration syst\u00E8me
 admin-console.tool.system-configuration.label = Configuration syst\u00E8me beCPG
 
 beCPG.charact.name.format.description                          = Permet de d\u00E9finir le format d'affichage du nom des caract\u00E9ristiques
+beCPG.charact.name.format.readonly                             = true
+beCPG.charact.name.format.type                                 = string
 beCPG.comparison.name.format.description                       = Permet de d\u00E9finir pour chaque type le format du nom \u00E0 utiliser lors de la comparaison. Le format \u00E0 respecter est type1|format1,type2|format2,...
 beCPG.copyOrBranch.propertiesToReset.description               = Permet de d\u00E9finir les propri\u00E9t\u00E9s et associations qui ne seront pas conserv\u00E9es lors d'une copie ou d'une fusion, s\u00E9par\u00E9es par des virgules
 beCPG.currency.supported.description                           = Permet de d\u00E9finir les devises support\u00E9es par le syst\u00E8me, s\u00E9par\u00E9es par des virgules
@@ -44,6 +46,10 @@ beCPG.product.report.showDeprecatedXml.description             = Affiche les GDA
 beCPG.product.searchTemplate.description                       = Permet de d\u00E9finir le mod\u00E8le de recherche des produits par d\u00E9faut utilis\u00E9 par Alfresco
 beCPG.project.name.format.description                          = Permet de d\u00E9finir le format d'affichage du nom des projets
 beCPG.quality.sampleId.format.description                      = Permet de d\u00E9finir le format du nom des \u00E9chantillons des ordres de fabrication
+beCPG.remote.rateLimiter.capacity.description                  = Nombre de requ\u00EAtes simultan\u00E9es autoris\u00E9es dans l'API distante.
+beCPG.remote.rateLimiter.capacity.type                         = Integer
+beCPG.remote.rateLimiter.refillRate.description                = Taux de recharge du seau de jetons pour le limiteur de d\u00E9bit de l'API distante.
+beCPG.remote.rateLimiter.refillRate.type                       = Double
 beCPG.report.datasource.maxSizeInBytes.description             = Permet de d\u00E9finir la taille (en octets) de la datasource de rapport \u00E0 partir de laquelle le syst\u00E8me l\u00E8ve une exigence non respect\u00E9e
 beCPG.report.image.maxSizeInBytes.description                  = Permet de d\u00E9finir la taille (en octets) des images de rapport \u00E0 partir de laquelle le syst\u00E8me l\u00E8ve une exigence non respect\u00E9e
 beCPG.report.includeReportInSearch.description                 = Permet d'indexer les rapports pour pouvoir les trouver via la recherche
