InProgress #21240 - [Feature] Add new GS1 fields

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
@@ -107,6 +107,8 @@ gs1_gs1Model.property.gs1_freeQuantityOfProduct.title                           
 gs1_gs1Model.property.gs1_freeQuantityOfProductPercent.title                              = Quantit\u00E9 gratuite (%)
 gs1_gs1Model.property.gs1_freeQuantityOfProductUnit.description                           = Quantit\u00E9 de produit gratuit dans l'unit\u00E9 commerciale de rang inf\u00E9rieur contenue dans un lot consommateur h\u00E9t\u00E9rog\u00E8ne. Cette quantit\u00E9 doit \u00EAtre exprim\u00E9e dans la m\u00EAme unit\u00E9 de mesure que le contenu net. S\u2019il existe plusieurs expressions du contenu net, l\u2019unit\u00E9 de mesure retenue est celle utilis\u00E9e pour l\u2019affichage du prix (si cette derni\u00E8re est d\u00E9finie)
 gs1_gs1Model.property.gs1_freeQuantityOfProductUnit.title                                 = Unit\u00E9
+gs1_gs1Model.property.gs1_functionalName.description                                      = D\u00E9crit l'utilisation du produit ou du service par le consommateur. Devrait aider \u00E0 clarifier la classification des produits associ\u00E9e au GTIN.
+gs1_gs1Model.property.gs1_functionalName.title                                            = Nom fonctionnel
 gs1_gs1Model.property.gs1_handlingInstructionsCodes.title                                 = Instructions de manutention
 gs1_gs1Model.property.gs1_hasBatchNumber.title                                            = Num\u00E9ro de lot
 gs1_gs1Model.property.gs1_hasDisplayReadyPackaging.description                            = Indique que l'unit\u00E9 commerciale est de type "pr\u00EAt \u00E0 vendre". C'est-\u00E0-dire que le lot/carton est pr\u00EAt pour \u00EAtre mis directement en rayon
