[Bug] Fix missing GS1 codes for geoOrigin

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
@@ -275,3 +275,14 @@ gs1_gs1Model.type.gs1_targetMarket.description                                  
 gs1_gs1Model.type.gs1_targetMarket.title                                                  = March\u00E9 cible
 gs1_gs1Model.type.gs1_tradeItemPriceList.description                                      = Liste des prix de vente
 gs1_gs1Model.type.gs1_tradeItemPriceList.title                                            = Prix de vente
+
+listconstraint.gs1_productActivityTypeCodes.ASSEMBLY        = Assemblage
+listconstraint.gs1_productActivityTypeCodes.BIRTH           = Naissance
+listconstraint.gs1_productActivityTypeCodes.BOTTLING        = Mise en bouteille
+listconstraint.gs1_productActivityTypeCodes.CATCH_ZONE      = Zone de capture
+listconstraint.gs1_productActivityTypeCodes.FARMING         = Agriculture
+listconstraint.gs1_productActivityTypeCodes.IMPORTATION     = Importation
+listconstraint.gs1_productActivityTypeCodes.LAST_PROCESSING = Dernier traitement
+listconstraint.gs1_productActivityTypeCodes.MILKING         = Traite
+listconstraint.gs1_productActivityTypeCodes.REARING         = \u00C9levage
+listconstraint.gs1_productActivityTypeCodes.SLAUGHTER       = Abattage
