[Setup] Fix junit tests

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/messages/becpg-messages_fr.properties
@@ -61,7 +61,7 @@ integrity-checker.constraint-error               = Une erreur de contrainte est 
 
 message.async-mail.entitiesTemplate.formulate.body         = La formulation des entit\u00E9s 
 message.async-mail.entitiesTemplate.formulate.subject      = [Notification] Fin de la formulation des entit\u00E9s
-message.async-mail.entitiesTemplate.removeDataList.body    = Suppression d'une liste en masse
+message.async-mail.entitiesTemplate.removeDataList.body    = Suppression d''une liste en masse
 message.async-mail.entitiesTemplate.removeDataList.subject = [Notification] Fin de suppression de la liste
 message.async-mail.entitiesTemplate.synchronize.body       = La Synchronisation des entit\u00E9s 
 message.async-mail.entitiesTemplate.synchronize.subject    = [Notification] Fin de la synchronisation des entiti\u00E9s
