InProgress #21240 - [Feature] Added healthClaimDescription and referencedTradeItem fields

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
@@ -17,6 +17,7 @@ gs1_gs1Model.aspect.gs1_organicAspect.title                                     
 gs1_gs1Model.aspect.gs1_packagingAspect.title                                             = GS1 Emballage/Conditionnement Aspect
 gs1_gs1Model.aspect.gs1_productActivityDetailsAspect.title                                = D\u00E9tails de l'activit\u00E9
 gs1_gs1Model.aspect.gs1_promotionalAspect.title                                           = Aspect Promotion
+gs1_gs1Model.aspect.gs1_referencedTradeItemAspect.title                                   = Article li\u00E9
 gs1_gs1Model.aspect.gs1_temperatureMeasurementAspect.title                                = Temp\u00E9rature
 gs1_gs1Model.association.gs1_alcoholBeverageContainerRef.description                      = Le type de conteneur utilis\u00E9 pour la boisson alcoolis\u00E9e.
 gs1_gs1Model.association.gs1_alcoholBeverageContainerRef.title                            = Conteneurs de boisson alcoolis\u00E9e
@@ -184,6 +185,8 @@ gs1_gs1Model.property.gs1_percentageOfAlcoholByVolume.title                     
 gs1_gs1Model.property.gs1_percentageOfAlcoholByVolumeMeasurementPrecisionCode.description = Indique la pr\u00E9cision de la mesure pour le pourcentage d'alcool en volume sur l'\u00E9tiquette, par ex. Alc. < 0,5 vol.
 gs1_gs1Model.property.gs1_percentageOfAlcoholByVolumeMeasurementPrecisionCode.title       = Pr\u00E9cision de la mesure du pourcentage d'alcool par volume
 gs1_gs1Model.property.gs1_platformTermsAndConditionsCode.title                            = Indication de support palette r\u00E9utilisable
+gs1_gs1Model.property.gs1_healthClaimDescription.description                              = Une description des all\u00E9gations sant\u00E9 selon la r\u00E9glementation du march\u00E9 cible.
+gs1_gs1Model.property.gs1_healthClaimDescription.title                                    = All\u00E9gation de sant\u00E9
 gs1_gs1Model.property.gs1_preparationType.title                                           = Etat de pr\u00E9paration du produit
 gs1_gs1Model.property.gs1_priceBasisQuantity.title                                        = Quantit\u00E9
 gs1_gs1Model.property.gs1_priceBasisQuantityUnit.title                                    = Unit\u00E9 de quantit\u00E9
@@ -201,6 +204,8 @@ gs1_gs1Model.property.gs1_productionMethodForFishAndSeafoodCode.title           
 gs1_gs1Model.property.gs1_promotionTypeCode.description                                   = Type de promotion
 gs1_gs1Model.property.gs1_promotionTypeCode.title                                         = Type de promotion
 gs1_gs1Model.property.gs1_publicationDate.title                                           = Date de publication
+gs1_gs1Model.property.gs1_referencedTradeItemEanCode.title                                = GTIN de l'article li\u00E9
+gs1_gs1Model.property.gs1_referencedTradeItemTypeCode.title                               = Nature du produit r\u00E9f\u00E9renc\u00E9
 gs1_gs1Model.property.gs1_rennetTypeCode.description                                      = Le type de pr\u00E9sure utilis\u00E9 pour la coagulation. L'enzyme de pr\u00E9sure est utilis\u00E9e pour la coagulation de la masse de fromage. La pr\u00E9sure et des enzymes similaires peuvent \u00EAtre obtenus par diff\u00E9rents processus.
 gs1_gs1Model.property.gs1_rennetTypeCode.title                                            = Type de pr\u00E9sure
 gs1_gs1Model.property.gs1_ripeningTimePeriod.description                                  = La p\u00E9riode de maturation du fromage. Au cours de la maturation, l'ar\u00F4me et la consistance d'un fromage changent constamment. Le caract\u00E8re d'un fromage est donc fortement d\u00E9termin\u00E9 par la p\u00E9riode de maturation. Selon les pr\u00E9f\u00E9rences personnelles, le consommateur final pr\u00E9f\u00E8re un fromage "jeune" ou "mature".
