InProgress #21240 - [Feature] Added season fields

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms_fr.properties
@@ -206,6 +206,7 @@ becpg.forms.set.product.name                                   = Nom du produit
 becpg.forms.set.promotional.label                              = Promotion
 becpg.forms.set.publication.label                              = Publication
 becpg.forms.set.regulatory.label                               = Conformit\u00E9
+becpg.forms.set.season.label                                   = Saison
 becpg.forms.set.secondaryPackaging.label                       = Unit\u00E9 logistique
 becpg.forms.set.security.label                                 = S\u00E9curit\u00E9
 becpg.forms.set.securityRule.label                             = R\u00E8gle de s\u00E9curit\u00E9
