--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
@@ -18,6 +18,7 @@ gs1_gs1Model.aspect.gs1_packagingAspect.title                                   
 gs1_gs1Model.aspect.gs1_productActivityDetailsAspect.title                                = D\u00E9tails de l'activit\u00E9
 gs1_gs1Model.aspect.gs1_promotionalAspect.title                                           = Aspect Promotion
 gs1_gs1Model.aspect.gs1_referencedTradeItemAspect.title                                   = Article li\u00E9
+gs1_gs1Model.aspect.gs1_seasonalAspect.title                                              = Aspect saisons
 gs1_gs1Model.aspect.gs1_temperatureMeasurementAspect.title                                = Temp\u00E9rature
 gs1_gs1Model.association.gs1_alcoholBeverageContainerRef.description                      = Le type de conteneur utilis\u00E9 pour la boisson alcoolis\u00E9e.
 gs1_gs1Model.association.gs1_alcoholBeverageContainerRef.title                            = Conteneurs de boisson alcoolis\u00E9e
@@ -210,6 +211,11 @@ gs1_gs1Model.property.gs1_rennetTypeCode.description                            
 gs1_gs1Model.property.gs1_rennetTypeCode.title                                            = Type de pr\u00E9sure
 gs1_gs1Model.property.gs1_ripeningTimePeriod.description                                  = La p\u00E9riode de maturation du fromage. Au cours de la maturation, l'ar\u00F4me et la consistance d'un fromage changent constamment. Le caract\u00E8re d'un fromage est donc fortement d\u00E9termin\u00E9 par la p\u00E9riode de maturation. Selon les pr\u00E9f\u00E9rences personnelles, le consommateur final pr\u00E9f\u00E8re un fromage "jeune" ou "mature".
 gs1_gs1Model.property.gs1_ripeningTimePeriod.title                                        = P\u00E9riode de maturation
+gs1_gs1Model.property.gs1_seasonalAvailabilityEndDateTime.title                           = Date de fin de la disponiblit\u00E9 saisonni\u00E8re
+gs1_gs1Model.property.gs1_seasonalAvailabilityStartDateTime.title                         = Date de d\u00E9but de la disponiblit\u00E9 saisonni\u00E8re
+gs1_gs1Model.property.gs1_seasonCalendarYear.title                                        = Ann\u00E9e civile de la saison
+gs1_gs1Model.property.gs1_seasonName.title                                                = Nom de la saison
+gs1_gs1Model.property.gs1_seasonParameterCode.title                                       = Param\u00E8tre de saison
 gs1_gs1Model.property.gs1_secondaryAddedFlavouringCode.description                        = L'ar\u00F4me qui a \u00E9t\u00E9 ajout\u00E9 \u00E0 l'alcool produit. C'est l'ajout secondaire.
 gs1_gs1Model.property.gs1_secondaryAddedFlavouringCode.title                              = Saveur ajout\u00E9e secondaire
 gs1_gs1Model.property.gs1_secondaryDepth.title                                            = Profondeur (mm)
