InProgress #21240 - [Feature] Added pegHole fields

--- a/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
+++ b/becpg-plm/becpg-plm-core/src/main/resources/alfresco/module/becpg-plm-core/model/gs1Model_fr.properties
@@ -15,6 +15,7 @@ gs1_gs1Model.aspect.gs1_marketingAspect.title                                   
 gs1_gs1Model.aspect.gs1_measuresAspect.title                                              = GS1 Mesures Aspect
 gs1_gs1Model.aspect.gs1_organicAspect.title                                               = Produit bio
 gs1_gs1Model.aspect.gs1_packagingAspect.title                                             = GS1 Emballage/Conditionnement Aspect
+gs1_gs1Model.aspect.gs1_pegHoleAspect.title                                               = Aspect trous de cheville
 gs1_gs1Model.aspect.gs1_productActivityDetailsAspect.title                                = D\u00E9tails de l'activit\u00E9
 gs1_gs1Model.aspect.gs1_promotionalAspect.title                                           = Aspect Promotion
 gs1_gs1Model.aspect.gs1_referencedTradeItemAspect.title                                   = Article li\u00E9
@@ -82,6 +83,10 @@ gs1_gs1Model.property.gs1_cplTurnover.title                                     
 gs1_gs1Model.property.gs1_cplUnitTotalCost.title                                          = Co\u00FBt
 gs1_gs1Model.property.gs1_dataCarrierTypeCode.description                                 = Indication du type de code \u00E0 barres pr\u00E9sent sur l'unit\u00E9 commerciale d\u00E9clar\u00E9e
 gs1_gs1Model.property.gs1_dataCarrierTypeCode.title                                       = Type de code \u00E0 barres
+gs1_gs1Model.property.gs1_secondaryDataCarrierTypeCode.description                        = Indication du type de code \u00E0 barres pr\u00E9sent sur l'unit\u00E9 commerciale d\u00E9clar\u00E9e
+gs1_gs1Model.property.gs1_secondaryDataCarrierTypeCode.title                              = Type de code \u00E0 barres
+gs1_gs1Model.property.gs1_tertiaryDataCarrierTypeCode.description                         = Indication du type de code \u00E0 barres pr\u00E9sent sur l'unit\u00E9 commerciale d\u00E9clar\u00E9e
+gs1_gs1Model.property.gs1_tertiaryDataCarrierTypeCode.title                               = Type de code \u00E0 barres
 gs1_gs1Model.property.gs1_degreeOfOriginalWort.description                                = Le degr\u00E9 de mo\u00FBt d'origine de la boisson alcoolis\u00E9e.
 gs1_gs1Model.property.gs1_degreeOfOriginalWort.title                                      = Degr\u00E9 de mo\u00FBt d'origine
 gs1_gs1Model.property.gs1_depth.title                                                     = Profondeur (mm)
@@ -181,6 +186,10 @@ gs1_gs1Model.property.gs1_packagingTermsAndConditionsCode.title                 
 gs1_gs1Model.property.gs1_packagingTypeCode.title                                         = Type d'emballage / conditionnement
 gs1_gs1Model.property.gs1_packagingTypeDescription.title                                  = Description du type d'emballage
 gs1_gs1Model.property.gs1_palletTypeCode.title                                            = Type de support palette
+gs1_gs1Model.property.gs1_pegHoleNumber.title                                             = Nombre de trous de cheville
+gs1_gs1Model.property.gs1_pegHoleTypeCode.title                                           = Type de trous de cheville
+gs1_gs1Model.property.gs1_pegHorizontal.title                                             = Distance horizontale des trous de cheville (mm)
+gs1_gs1Model.property.gs1_pegVertical.title                                               = Distance verticale des trous de cheville (mm)
 gs1_gs1Model.property.gs1_percentageOfAlcoholByVolume.description                         = Le pourcentage d'alcool par volume dans la boisson alcoolis\u00E9e.
 gs1_gs1Model.property.gs1_percentageOfAlcoholByVolume.title                               = Pourcentage d'alcool par volume (%)
 gs1_gs1Model.property.gs1_percentageOfAlcoholByVolumeMeasurementPrecisionCode.description = Indique la pr\u00E9cision de la mesure pour le pourcentage d'alcool en volume sur l'\u00E9tiquette, par ex. Alc. < 0,5 vol.
