--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms_fr.properties
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/messages/becpg-forms_fr.properties
@@ -195,6 +195,7 @@ becpg.forms.set.packSorting.label                              = Tri et marquage
 becpg.forms.set.packaging-description.label                    = Description du packaging
 becpg.forms.set.packaging.label                                = Emballage/Conditionnement
 becpg.forms.set.pallet.label                                   = Palettisation
+becpg.forms.set.pegHole.label                                  = Trous de cheville
 becpg.forms.set.physicoChems-criteria.label                    = Crit\u00E8res sur les physico-chimiques
 becpg.forms.set.primaryPackaging.label                         = Emballage du produit
 becpg.forms.set.product-criteria.label                         = Crit\u00E8res sur le produit
