--- a/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/console/becpg-admin.get_fr.properties
+++ b/becpg-share/src/main/resources/alfresco/site-webscripts/org/alfresco/components/console/becpg-admin.get_fr.properties
@@ -1,13 +1,12 @@
 
 button.empty-cache   = Vider
-button.init-acl      = Recharger
 button.init-repo     = Ex\u00E9cuter
 button.reload-config = Ex\u00E9cuter
 button.reload-model  = Ex\u00E9cuter
-button.show-users    = Voir
 button.show-batches  = Voir
+button.show-users    = Voir
 
-label.batchCounts      	  = T\u00e2ches en cours:
+label.batchCounts         = T\u00E2ches en cours:
 label.becpgSchema         = Sch\u00E9ma beCPG:
 label.characts            = Caract\u00E9ristiques syst\u00E8me
 label.characts.edit       = Editer les:
@@ -16,7 +15,6 @@ label.diskPerc            = Disque (%):
 label.empty-cache         = les caches beCPG
 label.freeMemory          = M\u00E9moire disponible:
 label.informations        = Informations syst\u00E8me
-label.init-acl            = les permissions
 label.init-repo           = l'initialisation de l'entrep\u00F4t
 label.maxMemory           = M\u00E9moire max:
 label.memory              = M\u00E9moire
@@ -25,21 +23,19 @@ label.reload-config       = le rechargement des formulaires
 label.reload-model        = le rechargement des mod\u00E8les
 #Form labels
 label.repository          = R\u00E9f\u00E9rentiel
+label.show-batches        = les t\u00E2ches en cours
 label.show-users          = les utilisateurs connect\u00E9s
-label.show-batches        = les t\u00e2ches en cours
 label.systemFolder.access = Acc\u00E9der aux:
 label.systemFolders       = Dossiers syst\u00E8me
+label.task.current        = T\u00E2che en cours:
+label.task.pending        = T\u00E2ches en attente:
 label.title-form          = Administration beCPG
 label.totalMemory         = M\u00E9moire allou\u00E9e:
 label.withoutLicenseUsers = Utilisateurs sans licences
-label.task.current 		  = T\u00e2che en cours:
-label.task.pending 		  = T\u00e2ches en attente:
 
-message.batch.cancel		  = Annuler la t\u00e2che
+message.batch.cancel          = Annuler la t\u00E2che
 message.empty-cache.failure   = Impossible de vider les caches
 message.empty-cache.success   = Caches vid\u00E9s avec succ\u00E9s
-message.init-acl.failure      = Echec lors du rechargement des permissions
-message.init-acl.success      = Permissions initialis\u00E9
 message.init-repo.failure     = Echec lors de l'initialisation de l'entrep\u00F4t
 message.init-repo.success     = Entrep\u00F4t initialis\u00E9
 message.reload-config.failure = Echec lors du rechargement de la configuration
