InProgress #22090 - [Feature] Add enforceACL property on Security rules lists

--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/securityModel_en.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/securityModel_en.properties
@@ -11,7 +11,9 @@ sec_secmodel.association.sec_groupsAssignee.title = Groups
 sec_secmodel.association.sec_readGroups.title     = Read groups
 sec_secmodel.association.sec_securityRef.title    = Security rule
 sec_secmodel.property.sec_aclPermission.title     = Permission
+sec_secmodel.property.sec_enforceACL.title        = Enforce ACL
 sec_secmodel.property.sec_isDefaultReadOnly.title = Read only by default
+sec_secmodel.property.sec_isEnforceACL.title      = Enforce ACL
 sec_secmodel.property.sec_isLocalPermission.title = Local permission
 sec_secmodel.property.sec_nodeType.title          = Node type
 sec_secmodel.property.sec_propName.title          = Property name
