--- a/becpg-core/src/main/resources/alfresco/module/becpg-core/model/securityModel_fr.properties
+++ b/becpg-core/src/main/resources/alfresco/module/becpg-core/model/securityModel_fr.properties
@@ -14,6 +14,7 @@ sec_secmodel.association.sec_readGroups.title     = Groupes en lecture
 sec_secmodel.association.sec_securityRef.title    = R\u00E8gle de s\u00E9curit\u00E9
 sec_secmodel.property.sec_aclPermission.title     = Droit d'acc\u00E9s
 sec_secmodel.property.sec_isDefaultReadOnly.title = Lecture seule par d\u00E9faut
+sec_secmodel.property.sec_isEnforceACL.title      = Forcer l'acc\u00E8s
 sec_secmodel.property.sec_isLocalPermission.title = Permission locale
 sec_secmodel.property.sec_nodeType.title          = Type de noeud
 sec_secmodel.property.sec_propName.title          = Nom de la propri\u00E9t\u00E9
